[package]
name = "sdk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
secp256k1 = { version = "0.22.1", features = ["rand-std", "global-context"] }
web3 = "0.18.0"
base58 = "0.2.0"
sha3  = "0.10.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
base64 = "0.13.0"
jwt-simple = "0.10"